entity_macros/tests/ui/derive/ent/missing-created.stderr
error: No created field provided
 --> $DIR/missing-created.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
