entity_macros/tests/ui/derive/ent/missing-created.rs
use entity::{Ent, Id, WeakDatabaseRc};

#[derive(Clone, Ent)]
struct TestEnt {
    #[ent(id)]
    id: Id,

    #[ent(database)]
    database: WeakDatabaseRc,

    #[ent(last_updated)]
    last_updated: u64,
}

fn main() {}
